k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runshoes
  namespace: runshoes
spec:
  type: ClusterIP
  selector:
    app: runshoes
  ports:
    - name: http
      port: 80
      targetPort: http
