k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runshoes
  namespace: runshoes
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kopo17-runshoes.std.kopoctc.kr
  rules:
    - host: kopo17-runshoes.std.kopoctc.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: runshoes
                port:
                  name: http
